--- a/bot-music-casino/Dockerfile
+++ b/bot-music-casino/Dockerfile
@@ -10,13 +10,22 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file into the container
-COPY requirements.txt .
+# NOTE: Build context must be project root
+COPY bot-music-casino/requirements.txt .
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the working directory contents into the container
-COPY . .
+# Copy Shared Library
+COPY common /app/common
+
+# Copy Bot Code
+COPY bot-music-casino /app/bot
+
+# Set Python Path to include root /app so 'common' can be imported
+ENV PYTHONPATH=/app
+
+WORKDIR /app/bot
 
 # Run main.py when the container launches
 CMD ["python", "main.py"]
