--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,9 @@ services:
       - DISCORD_CLIENT_ID=${MUSIC_BOT_CLIENT_ID}
       - DISCORD_PUBLIC_KEY=${MUSIC_BOT_PUBLIC_KEY}
       - DB_HOST=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
       - REDIS_URL=redis://redis:6379/0
       - PYTHONPATH=/app
 
@@ -65,6 +68,9 @@ services:
       - DISCORD_CLIENT_ID=${CINEMA_BOT_CLIENT_ID}
       - DISCORD_PUBLIC_KEY=${CINEMA_BOT_PUBLIC_KEY}
       - DB_HOST=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
       - REDIS_URL=redis://redis:6379/0
       - PYTHONPATH=/app
 
@@ -87,6 +93,9 @@ services:
       - ./common:/app/common
     environment:
       - DB_HOST=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
       - REDIS_URL=redis://redis:6379/0
 
 volumes:
